# langchain-course

./: .gitignore  README.md  callbacks.py  crawler.py  ingestion.py  main.py  main_custom_template.py  mediumblog1.txt  pyproject.toml
backend/: core.py
