[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.7",
    "langchain-pinecone>=0.2.12",
    "langchain-tavily>=0.2.11",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "tiktoken>=0.11.0",
]
