[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.7",
    "langchainhub>=0.1.21",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "qrcode>=8.2",
    "tabulate>=0.9.0",
]
